# AI_accelerator_Newline_mini-project-1_synthetic-data

./: .gitignore  README.md  create_project_structure.py  pyproject.toml
data/labels/: human_labels_baseline.jsonl  llm_judge_labels_baseline.jsonl  (+6 more)
docs/: baseline_generation_notes.md  baseline_smoke_notes.md  domain_mapping.md  labeling_guidelines.md  project_completion_summary.md  quality_gate_notes.md
logs/: analysis_baseline.jsonl  analysis_generator-baseline_judge-v1_20260717_162127.jsonl  analysis_generator-baseline_judge-v2_20260718_192614.jsonl  analysis_generator-baseline_judge-v3_20260718_193400.jsonl  analysis_generator-baseline_judge-v4_20260718_193758.jsonl  analysis_generator-baseline_judge-v5_20260718_194113.jsonl  analysis_generator-baseline_judge-v6_20260718_194909.jsonl  analysis_generator-corrected-content-access-v1_judge-v6_20260720_190910.jsonl  generation_baseline.jsonl  generation_generator-corrected-content-access-v1_20260720_190156.jsonl  iteration_log.jsonl  llm_judge_baseline.jsonl  llm_judge_generator-baseline_judge-v2_20260718_192522.jsonl  llm_judge_generator-baseline_judge-v3_20260718_193311.jsonl  llm_judge_generator-baseline_judge-v4_20260718_193702.jsonl  llm_judge_generator-baseline_judge-v5_20260718_194021.jsonl  llm_judge_generator-baseline_judge-v6_20260718_194819.jsonl  llm_judge_generator-corrected-content-access-v1_judge-v6_20260720_190632.jsonl  quality_gate_baseline.jsonl  quality_gate_generator-baseline_20260717_163121.jsonl  quality_gate_generator-corrected-content-access-v1_20260720_190626.jsonl
(+33 files in other folders)
